fix page resolutino for version masahif v5

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                 <path fill="#000" d="M25 18a7 7 0 107 7 .5.5 0 011 0 8 8 0 11-1.365-4.47.5.5 0 01-.829.56" clip-rule="evenodd"/>
               </svg>
           </button>
-            <input id="page" inputmode="numeric" type="text" placeholder="الصفحة" min="-3" />
+            <input id="page" inputmode="numeric" type="search" enterkeyhint="search" placeholder="الصفحة" min="-3" />
             <button id="go-page">
               <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="m12 2c-5.5 0-10 4.5-10 10s4.5 10 10 10c2.2 0 4.3-.7 6-2l9 10 3-3-10-9c1.3-1.7 2-3.8 2-6 0-5.5-4.5-10-10-10zm0 3c3.9 0 7 3.1 7 7s-3.1 7-7 7-7-3.1-7-7 3.1-7 7-7z" /></svg>
             </button>
@@ -604,7 +604,7 @@
                   <button id="go-search">
                     <svg width="20px" height="20px" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="m12 2c-5.5 0-10 4.5-10 10s4.5 10 10 10c2.2 0 4.3-.7 6-2l9 10 3-3-10-9c1.3-1.7 2-3.8 2-6 0-5.5-4.5-10-10-10zm0 3c3.9 0 7 3.1 7 7s-3.1 7-7 7-7-3.1-7-7 3.1-7 7-7z" /></svg>
                   </button>
-                  <input placeholder="البحث في المصحف، 5 أحرف أو أكثر" id="searchbox-input" type="search" />
+                  <input placeholder="البحث في المصحف، 5 أحرف أو أكثر" id="searchbox-input" enterkeyhint="search" type="search" />
                 </div>
 
                 <!-- Search result -->
